tests/e2e/authz-server/envoy/match-conditions/failure-policy-ignore/error-with-false/policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/playground/refs/heads/main/schemas/json/v3/validatingpolicy-policies.kyverno.io-v1alpha1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: policy
spec:
  evaluation:
    mode: Envoy
  failurePolicy: Ignore
  matchConditions:
  - name: error
    expression: '(2 / 0) == 1'
  - name: 'false'
    expression: 'false'
  validations:
  - expression: >
      envoy
        .Denied(403)
        .WithBody("Unauthorized Request")
        .Response()
